--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ url2 https://google.github.io/material-design-icons/ -->
   <tr>
     <th>
       *Cost of some bicycles were not recorded by Toronto Police Service. Such
-      entries has been omitted for calculating this value.
+      entries have been omitted for calculating this value.
     </th>
     <br /><br />
   </tr>
